Adding GUI Scaffold Database Bootstrap Sales Schema + Configuration Adding Views and Controllers

--- a/PHP.Sales.Core/PHP.Sales.Core.csproj
+++ b/PHP.Sales.Core/PHP.Sales.Core.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Extensions\EntityExtensions.cs" />
     <Compile Include="Models\BaseEntity.cs" />
     <Compile Include="Models\System\Report.cs" />
+    <Compile Include="Models\System\Sale.cs" />
     <Compile Include="Models\System\Transaction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
