--- a/PHP.Sales.DataAccess/App.config
+++ b/PHP.Sales.DataAccess/App.config
@@ -4,6 +4,10 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <connectionStrings>
+    <remove/>
+    <add name="sales.db" connectionString="Server=(LocalDB)\v11.0; Integrated Security=True; MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
