Added more functionality Fixed CSS issue Partial DB Issue Resolve

--- a/PHP.Sales.GenerateDatabase/App.config
+++ b/PHP.Sales.GenerateDatabase/App.config
@@ -5,8 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <remove/>
-    <add name="sales.db" connectionString="Server=(LocalDB)\v11.0; Integrated Security=True; MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
+    <add name="sales.db" connectionString="Server=(localdb)\MSSQLLocalDB;AttachDbFilename=D:\Personal Files\Projects\PHP-Sales\PHP.Sales.Web\App_Data\Sales.mdf; Integrated Security=True; MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
