Lots of changes

--- a/PHP.Sales.Core/PHP.Sales.Core.csproj
+++ b/PHP.Sales.Core/PHP.Sales.Core.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions\TransactionExtensions.cs" />
     <Compile Include="Extensions\EntityExtensions.cs" />
     <Compile Include="Models\BaseEntity.cs" />
     <Compile Include="Models\System\Report.cs" />
