--- a/PHP.Sales.DataAccess/PHP.Sales.DataAccess.csproj
+++ b/PHP.Sales.DataAccess/PHP.Sales.DataAccess.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configurations\ReportConfiguration.cs" />
     <Compile Include="Configurations\ProductConfiguration.cs" />
     <Compile Include="Configurations\SaleConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
