Commits to Log Branch: - Added Log DbSet - created LogController - Added System Object Log - created SaveChanges override in DbContext -> the code is broken still at this point

--- a/PHP.Sales.Core/PHP.Sales.Core.csproj
+++ b/PHP.Sales.Core/PHP.Sales.Core.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Extensions\TransactionExtensions.cs" />
     <Compile Include="Extensions\EntityExtensions.cs" />
     <Compile Include="Models\BaseEntity.cs" />
+    <Compile Include="Models\System\Log.cs" />
     <Compile Include="Models\System\Product.cs" />
     <Compile Include="Models\System\Report.cs" />
     <Compile Include="Models\System\Sale.cs" />
