--- a/PHP.Sales.Core/PHP.Sales.Core.csproj
+++ b/PHP.Sales.Core/PHP.Sales.Core.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions\SaleExtensions.cs" />
+    <Compile Include="Extensions\LogExtensions.cs" />
     <Compile Include="Extensions\TransactionExtensions.cs" />
     <Compile Include="Extensions\EntityExtensions.cs" />
     <Compile Include="Models\BaseEntity.cs" />
