Refactor Sale and Add Product List Selector

--- a/PHP.Sales.Web/PHP.Sales.Web.csproj
+++ b/PHP.Sales.Web/PHP.Sales.Web.csproj
@@ -165,6 +165,7 @@
     <Content Include="Views\Product\Details.cshtml" />
     <Content Include="Views\Product\Edit.cshtml" />
     <Content Include="Views\Product\Index.cshtml" />
+    <Content Include="Views\Shared\_ProductListSelector.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
