--- a/PHP.Sales.Web/packages.config
+++ b/PHP.Sales.Web/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="bootstrap" version="3.0.0" targetFramework="net462" />
   <package id="Chart.Mvc" version="1.0.0.2" targetFramework="net462" />
+  <package id="CsvExport" version="1.0.0" targetFramework="net462" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net462" />
   <package id="jQuery" version="1.10.2" targetFramework="net462" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net462" />
