Added Prediction Modeling

--- a/PHP.Sales.Logic/PHP.Sales.Logic.csproj
+++ b/PHP.Sales.Logic/PHP.Sales.Logic.csproj
@@ -47,15 +47,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Algorithum.cs" />
     <Compile Include="ProductLog.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ViewModels\" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ViewModels\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\PHP.Sales.Core\PHP.Sales.Core.csproj">
       <Project>{B45996C5-B0F3-4CC6-AC77-2294E3C9BD26}</Project>
